--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "3.1.0",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mercadopago": "^1.5.8"
   }
 }
