--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "express-handlebars": "3.1.0",
     "mercadopago": "^1.5.8"
   }
